--- a/src/components/Instructions/index.module.css
+++ b/src/components/Instructions/index.module.css
@@ -1,4 +1,4 @@
-.gameStatus {
+.instructions {
     margin: 0 auto;
     margin-bottom: 2rem;
     /* z-index: 1000; */
@@ -7,9 +7,11 @@
     max-width: 500px;
     padding: 2rem;
 
-    background-color: var(--bg-secondary);
+    /* background-color: var(--bg-secondary); */
+    background-color: var(--tooltip-bg);
+    color: var(--tooltip-text);
     border-radius: var(--radius-lg);
-    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1); */
 
     text-align: center;
 }
